correction problems